--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <meta name=twitter:description content="Saeed Golzar Personal Website.">
   <meta name=twitter:image content=http://saeedgolzar.ir/meta.jpg>
   <meta name=twitter:url content=http://saeedgolzar.ir>
-  <link rel=canonical href="index.php">
-  <link rel=stylesheet href="styles/normalize.css">
-  <link rel=stylesheet href="styles/main.css">
+  <link rel=canonical href="index.html">
+  <link rel=stylesheet href="https://saeedgolzar.ir/styles/normalize.css">
+  <link rel=stylesheet href="https://saeedgolzar.ir/styles/main.css">
   <?php require_once('privatedaddy.php'); ?>
 </head>
 <body>
@@ -102,6 +102,6 @@
         </div>
       </div>
   </footer>
-  <script src="scripts/main.js"></script>
+  <script src="https://saeedgolzar.ir/scripts/main.js"></script>
 </body>
 </html>
